Archive2/e9/9a02558c5c35d0/output
main.cpp: In function 'int main()':
main.cpp:13:14: error: invalid conversion from 'int (*)(MyEnum1)' to 'int (*)(int)' [-fpermissive]
     pFunc[0] = blah;
              ^
main.cpp:14:14: error: invalid conversion from 'int (*)(MyEnum2)' to 'int (*)(int)' [-fpermissive]
     pFunc[1] = guff;
              ^
